Alignment Fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1612,6 +1612,7 @@ blockquote {
 }
 
 .footer-logo {
+  align-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
 }
